--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,9 +52,15 @@ jobs:
           token_format: "access_token"
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.6.0
-      # - name: Containerizing
-      #   id: containerizing
-      #   run: ./scripts/containerize.sh
+      - name: Setting up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Containerizing
+        id: containerizing
+        run: ./scripts/containerize.sh
+      # scan image
+      - name: Pushing image
+        run: docker push "${{steps.containerizing.outputs.image-name }}"
+
       # - name: Deploying to Cloud Run
       #   id: deploy
       #   uses: google-github-actions/deploy-cloudrun@v0.10.0
