--- a/.github/workflows/deploy-tagged-version.yml
+++ b/.github/workflows/deploy-tagged-version.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Containerizing
         id: containerizing
         run: ./scripts/containerize.sh
+        env:
+          OUTPUT_MODE: push
       - name: Deploying to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0.10.0
