--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,18 @@ jobs:
         with:
           go-version: "^1.14.0"
       - name: Install dependencies
-        run: go version
+        run: go mod download
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/golang@0.3.0
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --sarif-file-output=snyk.sarif
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: snyk.sarif
       # - name: Uploading coverage
       #   uses: codacy/codacy-coverage-reporter-action@v1
       #   with:
