--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       #   with:
       #     sarif_file: snyk.sarif
       - name: Run Trivy vulnerability scanner in repo mode
-        uses: aquasecurity/trivy-action@v0.5.0
+        uses: aquasecurity/trivy-action@0.5.0
         with:
           scan-type: "fs"
           ignore-unfixed: false
@@ -78,7 +78,7 @@ jobs:
         id: containerizing
         run: ./scripts/containerize.sh
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@v0.5.0
+        uses: aquasecurity/trivy-action@0.5.0
         with:
           image-ref: ${{steps.containerizing.outputs.image-name }}
           format: "table"
