--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,16 +42,26 @@ jobs:
         run: go mod download
       - name: Testing
         run: go test -coverprofile=coverage.out
-      - run: ls
-      - name: Uploading coverage
-        uses: codacy/codacy-coverage-reporter-action@v1
-        with:
-          api-token: ${{ secrets.CODACY_API_TOKEN }}
-          coverage-reports: coverage.out
+      - run: |
+          export CODACY_API_TOKEN=dzouGhqSKK4O3SMWAD0Q
+          export CODACY_ORGANIZATION_PROVIDER=gh
+          export CODACY_USERNAME=koenighotze
+          export CODACY_PROJECT_NAME=bodleian-service
+          bash <(curl -Ls https://coverage.codacy.com/get.sh) report --force-coverage-parser go -r coverage.out
         env:
-          CODACY_PROJECT_NAME: "bodleian-service"
-          CODACY_ORGANIZATION_PROVIDER: "gh"
-          CODACY_USERNAME: "${{ github.repository_owner }}"
+          CODACY_PROJECT_NAME: bodleian-service
+          CODACY_ORGANIZATION_PROVIDER: gh
+          CODACY_USERNAME: ${{ github.repository_owner }}
+          CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
+      # - name: Uploading coverage
+      #   uses: codacy/codacy-coverage-reporter-action@v1
+      #   with:
+      #     api-token: ${{ secrets.CODACY_API_TOKEN }}
+      #     coverage-reports: coverage.out
+      #   env:
+      #     CODACY_PROJECT_NAME: "bodleian-service"
+      #     CODACY_ORGANIZATION_PROVIDER: "gh"
+      #     CODACY_USERNAME: "${{ github.repository_owner }}"
 
   build-container:
     needs:
