--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,7 +131,7 @@ jobs:
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0.10.0
         with:
-          image: ${{needs.build-container.outputs.image-name }}
+          image: "${{ secrets.CONTAINER_REGISTRY }}/${{ needs.build-container.outputs.pure-image-name }}"
           service: ${{ secrets.CLOUD_RUN_SERVICE }}
           region: ${{ secrets.CLOUD_RUN_REGION }}
           timeout: 30 # allow enough time to startup container
