Replace API Token

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,27 +43,14 @@ jobs:
       - name: Testing
         run: go test -coverprofile=coverage.out
       - run: |
-          export CODACY_API_TOKEN=dzouGhqSKK4O3SMWAD0Q
-          export CODACY_ORGANIZATION_PROVIDER=gh
-          export CODACY_USERNAME=koenighotze
-          export CODACY_PROJECT_NAME=bodleian-service
           bash <(curl -Ls https://coverage.codacy.com/get.sh) report --force-coverage-parser go -r coverage.out
         env:
           CODACY_PROJECT_NAME: bodleian-service
           CODACY_ORGANIZATION_PROVIDER: gh
           CODACY_USERNAME: ${{ github.repository_owner }}
           CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
-      # - name: Uploading coverage
-      #   uses: codacy/codacy-coverage-reporter-action@v1
-      #   with:
-      #     api-token: ${{ secrets.CODACY_API_TOKEN }}
-      #     coverage-reports: coverage.out
-      #   env:
-      #     CODACY_PROJECT_NAME: "bodleian-service"
-      #     CODACY_ORGANIZATION_PROVIDER: "gh"
-      #     CODACY_USERNAME: "${{ github.repository_owner }}"
 
-  build-container:
+  build-and-deploy-container:
     needs:
       - test
       - security-scan-code
@@ -72,9 +59,6 @@ jobs:
       id-token: write
 
     runs-on: ubuntu-20.04
-
-    outputs:
-      pure-image-name: ${{ steps.containerizing.outputs.pure-image-name }}
 
     steps:
       - name: Checking out
@@ -95,7 +79,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.5.0
         with:
-          image-ref: ${{steps.containerizing.outputs.image-name }}
+          image-ref: ${{ steps.containerizing.outputs.image-name }}
           format: "table"
           exit-code: "1"
           ignore-unfixed: true
@@ -106,32 +90,11 @@ jobs:
         run: ./scripts/containerize.sh
         env:
           OUTPUT_MODE: push
-
-  deploy-main:
-    needs:
-      - build-container
-
-    permissions:
-      id-token: write
-
-    runs-on: ubuntu-20.04
-
-    steps:
-      - name: Checking out
-        uses: actions/checkout@v3
-      - name: Authenticating
-        uses: google-github-actions/auth@v0.8.0
-        with:
-          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-          token_format: "access_token"
-      - name: Setting up GCP environment
-        uses: google-github-actions/setup-gcloud@v0.6.0
       - name: Deploying to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0.10.0
         with:
-          image: "${{ secrets.CONTAINER_REGISTRY }}/${{ needs.build-container.outputs.pure-image-name }}"
+          image: ${{ steps.push.outputs.image-name }}
           service: ${{ secrets.CLOUD_RUN_SERVICE }}
           region: ${{ secrets.CLOUD_RUN_REGION }}
           timeout: 30 # allow enough time to startup container
