--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,9 @@ name: Build main
 on:
   push:
     branches: [main]
-    tags-ignore: ["**"]
+    # tags-ignore: ["**"]
+    tags:
+      - "v*"
   workflow_dispatch:
 
 env:
