--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Checking out
         uses: actions/checkout@v3
       - name: Authenticating
-        uses: google-github-actions/auth@v0.8.0
+        uses: google-github-actions/auth@v0.7.3
         with:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
+          service_account: bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
           # token_format: "access_token"
           token_format: "id_token"
           id_token_audience: https://google.com
