--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,16 +21,21 @@ jobs:
       - name: Checking out
         uses: actions/checkout@v3
       - name: Authenticating
+        id: auth
         uses: google-github-actions/auth@v0.7.3
         with:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
           token_format: id_token
           id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
+          id_token_include_email: true
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v0.6.0
       - run: |
           gcloud info
           gcloud auth list
-      - run: gcloud auth print-access-token
-      - name: Setting up GCP environment
-        uses: google-github-actions/setup-gcloud@v0.6.0
-      - run: gcloud auth print-identity-token
+      - run: gcloud config list account --format "value(core.account)"
+      - id: "invoke-service"
+        run: |-
+          curl https://backend-83496-btesdmljxq-ey.a.run.app \
+          --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
