--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,15 +103,34 @@ jobs:
           timeout: 30 # allow enough time to startup container
           no_traffic: true
           tag: main-latest
-      - name: Authenticating for check
+      # - name: Authenticating for check
+      #   id: auth
+      #   uses: google-github-actions/auth@v0.8.0
+      #   with:
+      #     workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+      #     service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
+      #     token_format: id_token
+      #     id_token_include_email: true
+      #     id_token_audience: ${{ steps.deploy.outputs.url }}
+      # - name: Check if service is up
+      #   run: |
+      #     curl -H "Authorization: Bearer ${{ steps.auth.outputs.id_token }}" "${{ steps.deploy.outputs.url }}"
+      - name: Authenticating
         id: auth
-        uses: google-github-actions/auth@v0.8.0
+        uses: google-github-actions/auth@v0.7.3
         with:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
+          service_account: bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
           token_format: id_token
+          id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
           id_token_include_email: true
-          id_token_audience: ${{ steps.deploy.outputs.url }}
-      - name: Check if service is up
-        run: |
-          curl -H "Authorization: Bearer ${{ steps.auth.outputs.id_token }}" "${{ steps.deploy.outputs.url }}"
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v0.6.0
+      - run: |
+          gcloud info
+          gcloud auth list
+      - run: gcloud config list account --format "value(core.account)"
+      - id: "invoke-service"
+        run: |-
+          curl https://backend-83496-btesdmljxq-ey.a.run.app \
+          --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
