--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,7 +120,7 @@ jobs:
         uses: google-github-actions/auth@v0.7.3
         with:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
+          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }} #bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
           token_format: id_token
           id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
           id_token_include_email: true
