--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,6 +131,10 @@ jobs:
           gcloud auth list
       - run: gcloud config list account --format "value(core.account)"
       - id: "invoke-service" # https://backend-83496-btesdmljxq-ey.a.run.app \
+        run: |- # allow debugging
+          curl ${{ steps.deploy.outputs.url }}/health \
+          --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
+      - id: "invoke-service" # https://backend-83496-btesdmljxq-ey.a.run.app \
         run: |-
-          curl ${{ steps.deploy.outputs.url }} --fail \
+          curl ${{ steps.deploy.outputs.url }}/health --fail \
           --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
