--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -122,13 +122,12 @@ jobs:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }} #bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
           token_format: id_token
-          #id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
+          id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
           id_token_audience: ${{ steps.deploy.outputs.url }}
           id_token_include_email: true
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.6.0
       - run: |
-          gcloud info
           gcloud auth list
       - run: gcloud config list account --format "value(core.account)"
       - name: Debugg
