--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,10 +108,10 @@ jobs:
         uses: google-github-actions/auth@v0.7.3
         with:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }} #bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
+          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
           token_format: id_token
-          id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
-          # id_token_audience: ${{ steps.deploy.outputs.url }}
+          # id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
+          id_token_audience: ${{ steps.deploy.outputs.url }}
           id_token_include_email: true
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.6.0
@@ -120,11 +120,10 @@ jobs:
       - run: gcloud config list account --format "value(core.account)"
       - name: Debugg
         run: |-
-          curl https://backend-83496-btesdmljxq-ey.a.run.app/actuator/health \
-               --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
-
-          # curl ${{ steps.deploy.outputs.url }}/health \
-          # --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
+          curl ${{ steps.deploy.outputs.url }}/health \
+            --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
+      # curl https://backend-83496-btesdmljxq-ey.a.run.app/actuator/health \
+      #      --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
       # - id: "invoke-service"
       #   run: |-
       #     curl ${{ steps.deploy.outputs.url }}/health --fail \
