--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,15 +69,9 @@ jobs:
       - name: Authenticating
         uses: google-github-actions/auth@v0.8.0
         with:
-          # workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          # service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-          # token_format: "access_token"
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-          token_format: id_token
-          # id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
-          id_token_audience: ${{ steps.deploy.outputs.url }}
-          id_token_include_email: true
+          token_format: "access_token"
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v0.6.0
       - name: Setting up Docker Buildx
@@ -109,16 +103,16 @@ jobs:
           timeout: 30 # allow enough time to startup container
           no_traffic: true
           tag: main-latest
-      # - name: Authenticating
-      #   id: auth
-      #   uses: google-github-actions/auth@v0.7.3
-      #   with:
-      #     workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-      #     service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-      #     token_format: id_token
-      #     # id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
-      #     id_token_audience: ${{ steps.deploy.outputs.url }}
-      #     id_token_include_email: true
+      - name: Authenticating
+        id: auth
+        uses: google-github-actions/auth@v0.7.3
+        with:
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
+          token_format: id_token
+          # id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
+          id_token_audience: ${{ steps.deploy.outputs.url }}
+          id_token_include_email: true
       # - name: Setting up GCP environment
       #   uses: google-github-actions/setup-gcloud@v0.6.0
       - name: Testing if service is up
