--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,6 +113,8 @@ jobs:
           # id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
           id_token_audience: ${{ steps.deploy.outputs.url }}
           id_token_include_email: true
+          create_credentials_file: false
+          export_environment_variables: false
       # - name: Setting up GCP environment
       #   uses: google-github-actions/setup-gcloud@v0.6.0
       - name: Testing if service is up
